# vacuum_bot

./: CMakeLists.txt  LICENSE.txt  README.md  package.xml  setup.py
launch/: camera_manager.launch  control.launch  demo.launch  description.launch  devel.launch  gazebo_control.launch  moveit.launch  rviz.launch  scene.launch  vacuum_bot.launch
rviz/: control.rviz  demo.rviz
scripts/: ordered_launch.py
urdf/: LICENSE.txt  vacuum_bot.urdf  vacuum_bot.urdf.xacro  vacuum_bot_macros.xacro  vacuum_bot_properties.xacro
urdf/meshes/: base_collision.dae  base_tex.dae  camera.dae  end_effector_tex.dae  lower_arm_tex.dae  upper_arm_tex.dae  wheel_plate.dae  wheel_tex.dae  z_link_tex.dae
